...
            "state": "translated",
            "value": "Nueva nota"
          }
        }
      }
    },
    "Edit Note": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit Note"
...
            "state": "translated",
            "value": "Guardar"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "Borrar filtros"
          }
        }
      }
    },
    "No notes yet": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No notes yet"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Aún no hay notas"
          }
        }
      }
    },
    "No notes found": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "¡Crea tu primera nota para empezar!"
          }
        }
      }
    },
    "Delete Note": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete Note"
...
            "state": "translated",
            "value": "Eliminar nota"
          }
        }
      }
    },
    "Delete": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
...
